Make default value for function type